# acquire-driver-pvcam

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  bindings.rs  build.rs
.github/workflows/: build.yml  release.yml  test_pr.yml
cmake/: pvcam.cmake
src/: CMakeLists.txt  lib.rs  logger.rs  pvcam.camera.h  pvcam.cpp  pvcam.driver.c  pvcam.prelude.h  pvcam.rs
src/capi/: mod.rs  pvcam.rs
src/pvcam/: api.rs  camera.rs  error.rs  mod.rs
tests/: CMakeLists.txt  bsi-express-configure-properties.cpp  bsi-express-metadata.cpp  bsi-express-one-video-stream.cpp  bsi-express-repeat-start.cpp  capi.rs  kinetix-configure-properties.cpp  kinetix-metadata.cpp  kinetix-one-video-stream.cpp  kinetix-repeat-start-no-stop.cpp  kinetix-repeat-start.cpp  kit.rs  list-devices.cpp  prime-bsi-configure-properties.cpp  prime-bsi-express-configure-triggering.cpp  prime-bsi-express-metadata.cpp  prime-bsi-express-one-video-stream.cpp  prime-bsi-express-repeat-start-no-stop.cpp  prime-bsi-metadata.cpp  prime-bsi-one-video-stream.cpp  prime-bsi-repeat-start-no-stop.cpp  prime-bsi-repeat-start.cpp  pvtest.cpp  unit-tests.cpp
