[package]
name = "acquire-driver-pvcam"
authors = ["Nathan Clack <nclack@chanzuckerberg.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { version = "0.4", features = ["std"] }
parking_lot = "0.12"
no-panic = "0.1.22"
thiserror = "1.0.47"

[dev-dependencies]
libloading = "0.8"
test-cdylib = "1.1"
more-asserts = "0.3"

[build-dependencies]
bindgen = "0.66"
