[package]
name = "acquire-driver-pvcam"
authors = ["Nathan Clack <nclack@chanzuckerberg.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { version = "0.4", features = ["std"] }
parking_lot = "0.12"
no-panic = "0.1.22"
thiserror = "1.0.47"
memoffset = "0.9.0"
static_assertions = "1.1.0"

[dev-dependencies]
test-cdylib = "1.1"
more-asserts = "0.3"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"

[build-dependencies]
bindgen = "0.66"
